ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /employee
        pathType: Prefix
        backend:
          service:
            name: reactapp
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reactapp
            port:
              number: 80
      - path: /api/employee
        pathType: Prefix
        backend:
          service:
            name: javaapp
            port:
              number: 8080
